feat #333: Add truncate mode to the PC client and TUI
